tests/snapshots/integration__integration_tests__switch__switch_execute_creates_file.snap
---
source: tests/integration_tests/switch.rs
info:
  program: wt
  args:
    - switch
    - "--create"
    - file-test
    - "--execute"
    - "echo 'test content' > test.txt"
  env:
    CLICOLOR_FORCE: "1"
    COLUMNS: "150"
    GIT_AUTHOR_DATE: "2025-01-01T00:00:00Z"
    GIT_COMMITTER_DATE: "2025-01-01T00:00:00Z"
    GIT_CONFIG_GLOBAL: /dev/null
    GIT_CONFIG_SYSTEM: /dev/null
    GIT_EDITOR: ""
    LANG: C
    LC_ALL: C
    SOURCE_DATE_EPOCH: "1761609600"
    WORKTRUNK_CONFIG_PATH: /var/folders/wf/s6ycxvvs4ln8qsdbfx40hnc40000gn/T/.tmpwdeyiZ/test-config.toml
---
success: true
exit_code: 0
----- stdout -----
✅ [32mCreated new worktree for [1m[32mfile-test[0m[32m from [1m[32mmain[0m[32m at [1m[32m[REPO].file-test[0m[0m
🔄 [36mExecuting (--execute):[0m
[40m [0m  [1m[34mecho[0m [32m'test content'[0m [36m>[0m test.txt[0m

----- stderr -----
