tests/snapshots/integration__integration_tests__switch__switch_execute_multiline.snap
---
source: tests/integration_tests/switch.rs
info:
  program: wt
  args:
    - switch
    - "--create"
    - multiline-test
    - "--execute"
    - "echo 'line1'\necho 'line2'\necho 'line3'"
  env:
    CLICOLOR_FORCE: "1"
    COLUMNS: "150"
    GIT_AUTHOR_DATE: "2025-01-01T00:00:00Z"
    GIT_COMMITTER_DATE: "2025-01-01T00:00:00Z"
    GIT_CONFIG_GLOBAL: "[TEST_GIT_CONFIG]"
    GIT_CONFIG_SYSTEM: /dev/null
    GIT_EDITOR: ""
    HOME: "[TEST_HOME]"
    LANG: C
    LC_ALL: C
    SOURCE_DATE_EPOCH: "1761609600"
    WORKTRUNK_BIN: ""
    WORKTRUNK_CONFIG_PATH: "[TEST_CONFIG]"
---
success: true
exit_code: 0
----- stdout -----
✅ [32mCreated new worktree for [1m[32mmultiline-test[0m[32m from [1m[32mmain[0m[32m at [1m[32m[REPO].multiline-test[0m[0m
🔄 [36mExecuting (--execute):[0m
[107m [0m  [2m[1m[2m[34mecho[2m [2m[32m'line1'[2m[0m
[107m [0m  [2m[1m[2m[34mecho[2m [2m[32m'line2'[2m[0m
[107m [0m  [2m[1m[2m[34mecho[2m [2m[32m'line3'[2m[0m
line1
line2
line3

----- stderr -----
